-【Markdown】リスト中のブランク行の後に先頭スペースを含む行があったとき、リストが続いているとみなすように変更。（本家準拠）
-【Markdown】途中空行を挟むリストがあった場合、リスト記号が異なれば違うリストと扱うように変更。((標準非準拠の動作ですが、この方が使いやすいと思うので影響の少ない範囲で変更しました。問題がある場合は skel/parser/markdown.html を skel.local/parser/markdown.html にコピー編集してください。))
-【Markdown/fix】リストブロックの処理に問題があった。（[https://adiary.adiary.jp/0399#c12:Thanks to epg]）
-【Markdown/fix】{<p>}で段落ブロックを切り出す際、余計なブランク行を挿入していた。
-【fix】同時編集ロック機能での誤検出がまだ発生していた。
-【fix】ブログのコピーを作成した際、設定を保存しないとブログタイトルなどがブログ一覧に反映されない。
-【fix】検索プラグインのradioボタンが文字で選べない。
-【fix】DirectoryIndexに設定されたときの検出に失敗する。
-【fix】サブドメインモードかつ https の時、Canonical URL等がおかしい。
-他

Markdown記法にてリストの入れ子処理を変更しました。この変更により本家の動作に近づいたと思いますが、もしかしたら不具合があるかも知れません。

*Ver3.16 : 2018/08/11

-画像アルバムモードを追加（詳細設定）。
-adiary.conf.cgi.sample のパーサー設定の説明と順番を変更。
-更新通知Ping送信先から http://blogsearch.google.co.jp/ping/RPC2 を削除。
-プライベートブログでは更新通知を送らないように変更。
-irisテーマを再録。
-印刷用テーマ _sagiri を収録。
-「{<input><label></label>}」を「{<label><input></label>}」に書き換え。
-印刷用テーマで、ユーザーCSS（カスタムデザインを含む）を無効化。
-【plugin】サイドタグモジュールで、表示階層などを選択できるように変更。複数配置に対応。（[https://adiary.adiary.jp/0399#c3:Thanks to nomura]）
-【plugin】カレンダーモジュールで、山の日、2020年の祝日移動に対応しました。
-【plugin】基本情報モジュールで、印刷用テーマを選択できるようにしました。((複数存在する場合のみ))
-【fix】https:// 接続時に生成されるリンクが一部 http:// になっていた。
-【fix】Edgeのバグ対応のため、dateのmaxを "2914-12-31" に変更。（[https://adiary.adiary.jp/0399#c1:Thanks to epg]）
-【fix】同時編集検出に、アンロックがうまくいかない不具合があった。
-【fix/Markdown】引用などブロックの入れ子が起こると、目次記法（{*toc}）が出力されない。（Thanks to Kaede）
-他

*Ver3.15-C94SE : 2018/08/09

-This version distribute only in C94

*Ver3.14a : 2018/03/05

-【fix】Perl5.26において記事が書き込めない。（[https://twitter.com/kero7/status/957502104305770496:Thanks to けろ]）
-【fix】Perl5.8.9において一部コンパイルエラーが起こる。
-【plugin】sp_view360（360度画像プラグイン）を収録。

*Ver3.14 : 2017/12/28

-テザインモジュール一覧のページをアップデート。
-テーマカスタム画面のオプション名を分かりやすくしました。
-ブログのコピー作成時、画像アルバムを初期化する機能を付けました。
-【Markdown】GFMのチェックボックス拡張に対応しました。（Request from Kaede）
-【plugin】ARTICLE_FIRST_VISIBLE_PINGイベントの追加。
-【plugin】WebPushの既知サーバに Edge のPushサーバを追加。
-【テーマ】過去のSpecial Editionテーマを見やすく修正。