@@ -21,29 +21,23 @@ CryptX ( http://search.cpan.org/~mik/CryptX/lib/CryptX.pm )は、
 RPM系ならば perl-CryptX パッケージががありますが、
 Debian系ではCPANからインストールする必要があります。
 
-●対応ブラウザ（2017/02）
+●動作確認ブラウザ（2018/08）
 
 -Chrome
 -Firefox
-
-Edgeは今後対応予定のようです。
-
-※新しく対応ブラウザが増えてもセキュリティの関係上、
-　そのブラウザではすぐには利用できません。
-　このプラグインが対応したのを確認してからアップデートしてください。
-　プラグインが対応してなかったら、作者までご連絡ください。
+-Edge
 
 ●WebPush登録
 
-インストール後、記事を表示した状態で設定秒数が経過すると、
-WebPush登録のダイアログが表示されます。
-
-※対応外のブラウザや、既にブロック設定されている場合は何も起きません。
-
-このダイアログ自動で表示するのをやめて、
 サイドバーなどに登録のためのボタンを配置することもできます。
 
 	<button type="button" class="regist-webpush">登録</button>
 
 もしくは、サイドバーの「ブログの基本情報」（des_information-ja）を使うと、
 このボタンをすぐに配置できます。
+
+●履歴
+
+-Ver1.10  RFC準拠。Edge対応。aes128gcm encoding
+-Ver1.00  First Version
+
