@@ -1,6 +1,6 @@
 ######################################################################
 title=WebPush
-version=1.00
+version=1.10
 #					(C)2017 nabe@abk
 ######################################################################
 description=登録した人にWebPushで更新を通知します
