@@ -7,6 +7,7 @@
 -【Markdown】途中空行を挟むリストがあった場合、リスト記号が異なれば違うリストと扱うように変更。((標準非準拠の動作ですが、この方が使いやすいと思うので影響の少ない範囲で変更しました。問題がある場合は skel/parser/markdown.html を skel.local/parser/markdown.html にコピー編集してください。))
 -【Markdown/fix】リストブロックの処理に問題があった。（[https://adiary.adiary.jp/0399#c12:Thanks to epg]）
 -【Markdown/fix】{<p>}で段落ブロックを切り出す際、余計なブランク行を挿入していた。
+-【plugin】webpushプラグインをRFC準拠で更新しました。EdgeHTML 17以降に対応しました。
 -【fix】同時編集ロック機能での誤検出がまだ発生していた。
 -【fix】ブログのコピーを作成した際、設定を保存しないとブログタイトルなどがブログ一覧に反映されない。
 -【fix】検索プラグインのradioボタンが文字で選べない。
